--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,23 +15,23 @@ jobs:
       SYNC_API_URL: "https://api.github.cds.internal.unity3d.com"
       SYNC_WORKFLOW_PATH: "main.yml"
       SYNC_WORKFLOW_BRANCH: "gh-action"
-      PUSHED_REPO: "foo"
-      PUSHED_BRANCH: "bar"
     steps:
       - name: Trigger Yamato sync
         run: |
             sync_workflow_dispatch_endpoint="${SYNC_API_URL}/repos/${SYNC_REPO_OWNER}/${SYNC_REPO_NAME}/actions/workflows/${SYNC_WORKFLOW_PATH}/dispatches"
 
+            echo "The pushing repo name: \"${GITHUB_REPOSITORY}\""
+            echo "The pushing repo branch: \"${GITHUB_REF_NAME}\""
             curl -k "${sync_workflow_dispatch_endpoint}" \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Content-Type: application/json" \
                 -u "${GH_CDS_USER}:${GH_CDS_TOKEN}" \
                 --data \
                     "{
-                        \"ref\"                  : \"${SYNC_WORKFLOW_BRANCH}\",
-                        \"inputs\"               : {
-                            \"PUSHED_REPO\"   : \"${PUSHED_REPO}\",
-                            \"PUSHED_BRANCH\" : \"${PUSHED_BRANCH}\"
+                        \"ref\"     : \"${SYNC_WORKFLOW_BRANCH}\",
+                        \"inputs\"  : {
+                            \"PUSHED_REPO\"   : \"${GITHUB_REPOSITORY}\",
+                            \"PUSHED_BRANCH\" : \"${GITHUB_REF_NAME}\"
                         }
                     }"
 
