--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   trigger-sync:
     runs-on: ubuntu-latest
+    environment: prd
     env:
       GH_CDS_USER: ${{ secrets.GH_CDS_USER }}
       GH_CDS_TOKEN: ${{ secrets.GH_CDS_TOKEN }}
