--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,6 @@
-name: Sync-to-partner-repo
+# NOTE: This workflow will/should only be run on the partner repos
+# (notice the trigger-sync['if'] item).
+name: Trigger-sync-with-partner
 on:
   push:
     branches:
@@ -6,16 +8,27 @@ on:
 
 jobs:
   trigger-sync:
+    # Only run gh-actions sync-trigger from partner end
+    if: >-
+      ! contains(github.repository_owner, 'unity')
     runs-on: ubuntu-latest
+
+    # The gihub env that has access to the GH_CDS secrets
     environment: prd
+
     env:
+
+      # These should be set on the partner github secrets
       GH_CDS_USER: ${{ secrets.GH_CDS_USER }}
       GH_CDS_TOKEN: ${{ secrets.GH_CDS_TOKEN }}
+
+      # Params of the sync repo (this repo, should have being already set up)
       SYNC_REPO_OWNER: "unity"
       SYNC_REPO_NAME: "bonfire-unity-graphics-sync"
       SYNC_API_URL: "https://api.github.cds.internal.unity3d.com"
       SYNC_WORKFLOW_PATH: "main.yml"
       SYNC_WORKFLOW_BRANCH: "gh-action"
+
     steps:
       - name: Trigger Yamato sync
         run: |
