--- a/.github/workflows/sync_trigger.yml
+++ b/.github/workflows/sync_trigger.yml
@@ -1,6 +1,7 @@
 # NOTE: This workflow will/should only be run on the partner repos
 # (notice the trigger-sync['if'] item).
 # testing yamato
+# second test
 name: Trigger-sync-with-partner
 on:
   push:
